List of credits

--- a/templates/create-credit-action.html.twig
+++ b/templates/create-credit-action.html.twig
@@ -5,6 +5,8 @@
         <title>Създаден кредит</title>
     </head>
     <body>
+        {% include 'navigation.html.twig' %}
+
         <h1>Успешно създаден кредит</h1>
         ID: {{ id }}<br>
         Име и фамилия: {{ fullName }}<br>
