--- a/templates/navigation.html.twig
+++ b/templates/navigation.html.twig
@@ -2,5 +2,6 @@
     <ul>
         <li><a href="/">Кредити</a></li>
         <li><a href="/create-credit">Създай кредит</a></li>
+        <li><a href="/payment">Плащане</a></li>
     </ul>
 </nav>
