Validate input on user side

--- a/templates/credit-create-form.html.twig
+++ b/templates/credit-create-form.html.twig
@@ -10,8 +10,8 @@
         <h1>Създай кредит</h1>
         <form action="/create-credit-action" method="POST">
             <label for="full-name-input">Име и фамилия: </label><input type="text" id="full-name-input" name="full-name" autofocus required><br>
-            <label for="amount-input">Сума в лева: </label><input type="number" id="amount-input" name="amount" required min="1" step="1"><br>
-            <label for="months-input">Срок в месеца: </label><input type="number" id="months-input" name="months" step="1" required><br>
+            <label for="amount-input">Сума в лева: </label><input type="number" id="amount-input" name="amount" required min="1" max="80000" step="1"><br>
+            <label for="months-input">Срок в месеца: </label><input type="number" id="months-input" name="months" min="3" max="120" step="1" required><br>
             <input type="submit" value="Създай">
         </form>
     </body>
